2011-05-24  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-78
	* improve resilience of diff-root-files in the face of
	  out-of-synch iterators over leaves
	* M python/scripts/diff_root_files.py

	* tagging PyUtils-00-10-77
	* fix bug 82176: gzip the athfile-cache files
	* python/AthFile/impl.py

	* tagging PyUtils-00-10-76
	* fix bug 82547: proper quoting of avn command arguments:
	  avn ci -m "It's an abbreviation. an escaped double-quote: \""
	  avn ci -m 'Here is an unescaped double-quote: "'
	* harmonize --range into --entries
	* M bin/avn.py
	* M python/scripts/dump_root_file.py

2011-05-23  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-75
	* add a --range option to dump-root-file to dump parts of a file
	* M python/scripts/dump_root_file.py

2011-05-20  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-74
	* obo V.Tsulaia: fixup for AthenaMP
	* M python/AthFile/impl.py

2011-05-18  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-73
	* support for Gaudi packages
	* fixed regression introduced by refactoring w/ -72
	* M bin/pkgco.py

2011-05-16  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-72
	* support for Gaudi packages
	* M bin/pkgco.py

	* tagging PyUtils-00-10-71
	* fix performance regression in diffPoolFiles stemming from a
	  perhaps too detailed branch size calculation.
	  use checkFile --detailed-branch-size to enable it.
	* M python/PoolFile.py

2011-05-04  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-70
	* bug #81808: better protection against empty PoolFileCatalog.xml files
	* M python/PoolFile.py

2011-05-02  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-69
	* use ROOTENV_NO_HOME in athfile forked subprocess
	* M python/AthFile/impl.py

2011-04-28  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-68
	* obo Peter vG: display buffer object lengths for each branch